clusters/main/kubernetes/apps/paperless/app/gateway-api-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - paperless.${DOMAIN_0}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
      backendRefs:
        - name: authentik-http
          namespace: authentik
          port: 10230
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-paperless-ngx
          port: 10140
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-http-redirect
  namespace: paperless
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
  hostnames:
    - paperless.${DOMAIN_0}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
